yaml/traefik/dp.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      nodeSelector:
        node-role.kubernetes.io/node: ""
      containers:
        - name: traefik
          image: harbor.hzwod.com/k8s/traefik:v2.2
          args:
            - --log.level=DEBUG
            - --api
            - --api.insecure
            - --entrypoints.traefik.address=:8180
            - --entrypoints.web.address=:3080
            - --entrypoints.tcpep.address=:8100
            - --entrypoints.udpep.address=:9100/udp
            - --providers.kubernetesingress
            - --providers.kubernetescrd
            #- --entryPoints.metrics.address=:8082
            - --metrics=true
            - --metrics.prometheus=true
            - --metrics.prometheus.buckets=0.100000, 0.300000, 1.200000, 5.000000
#            - --metrics.prometheus.addEntryPointsLabels=true
#            - --metrics.prometheus.addServicesLabels=true
            - --metrics.prometheus.entryPoint=traefik
#            - --metrics.prometheus.manualrouting=true
          ports:
            - name: web
              containerPort: 3080
            - name: admin
              containerPort: 8180
            - name: tcpep
              containerPort: 8100
            - name: udpep
              containerPort: 9100
