yaml/traefik/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefiktcp
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
      nodePort: 3080
    - protocol: TCP
      port: 8080
      name: admin
      targetPort: 8080
      nodePort: 8180
    - protocol: TCP
      port: 8000
      name: tcpep
      targetPort: 8000
      nodePort: 8100
---
apiVersion: v1
kind: Service
metadata:
  name: traefikudp
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: UDP
      port: 9000
      name: udpep
      targetPort: 9000
      nodePort: 9100
